// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkSelect dark mode should render correctly 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": -11249568,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(68, 80, 95)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect dark mode should render correctly with "showImage" and image 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": -11249568,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(68, 80, 95)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
>
  <Image
    style={
      Array [
        undefined,
        Array [
          Object {
            "backgroundColor": "rgb(1, 9, 19)",
            "height": 12,
            "marginEnd": 8,
            "width": 16,
          },
        ],
      ]
    }
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect dark mode should render correctly with "showImage" and no image 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": -11249568,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(68, 80, 95)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(1, 9, 19)",
          "height": 12,
          "marginEnd": 8,
          "width": 16,
        },
      ]
    }
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect dark mode should render correctly with "valid" false 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": -11249568,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(68, 80, 95)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
      Object {
        "borderColor": "rgb(255, 100, 156)",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          Object {
            "color": "rgb(255, 100, 156)",
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect dark mode should render correctly with "valid" false and "focused" (focused should take precedence) 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": -11249568,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(68, 80, 95)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
      Object {
        "borderColor": "rgb(255, 100, 156)",
      },
      Object {
        "borderColor": "rgb(132, 233, 255)",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          Object {
            "color": "rgb(255, 100, 156)",
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect dark mode should render correctly with "valid" false and a validation message 1`] = `
<View>
  <View
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": false,
        "color": -11249568,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "rgb(68, 80, 95)",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 4,
        },
        Object {
          "borderColor": "rgb(255, 100, 156)",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "marginStart": 4,
            },
            Object {
              "color": "rgb(255, 100, 156)",
            },
          ],
        ]
      }
    >
      
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "marginStart": 4,
            },
            null,
          ],
        ]
      }
    >
      
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0,
          "textAlign": "left",
        },
        Object {},
        Object {
          "color": "rgb(255, 100, 156)",
          "paddingTop": 4,
        },
      ]
    }
  >
    Nope
  </Text>
</View>
`;

exports[`Android BpkSelect dark mode should render correctly with "valid" true 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": -11249568,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(68, 80, 95)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          Object {
            "color": "rgb(98, 241, 198)",
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect dark mode should render correctly with a text label 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": -11249568,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(68, 80, 95)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          false,
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect dark mode should render correctly with an element label 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": -11249568,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(68, 80, 95)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
>
  <View />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect dark mode should render correctly with custom styles 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": -11249568,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(68, 80, 95)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          false,
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect dark mode should render correctly with the disabled prop 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={false}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": -11249568,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(68, 80, 95)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
      Object {
        "borderColor": "rgb(36, 51, 70)",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          Array [
            Object {
              "color": "rgba(255, 255, 255, 0.2)",
            },
          ],
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          Object {
            "color": "rgba(255, 255, 255, 0.2)",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect dark mode should render correctly with the focused and disabled props (disabled take precedence) 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={false}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": -11249568,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(68, 80, 95)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
      Object {
        "borderColor": "rgb(36, 51, 70)",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          Array [
            Object {
              "color": "rgba(255, 255, 255, 0.2)",
            },
          ],
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          Object {
            "color": "rgba(255, 255, 255, 0.2)",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect dark mode should render correctly with the focused prop 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": -11249568,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(68, 80, 95)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
      Object {
        "borderColor": "rgb(132, 233, 255)",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          false,
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect light mode should render correctly 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": null,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(194, 201, 205)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect light mode should render correctly with "showImage" and image 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": null,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(194, 201, 205)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
>
  <Image
    style={
      Array [
        undefined,
        Array [
          Object {
            "backgroundColor": "rgb(239, 241, 242)",
            "height": 12,
            "marginEnd": 8,
            "width": 16,
          },
        ],
      ]
    }
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect light mode should render correctly with "showImage" and no image 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": null,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(194, 201, 205)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(239, 241, 242)",
          "height": 12,
          "marginEnd": 8,
          "width": 16,
        },
      ]
    }
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect light mode should render correctly with "valid" false 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": null,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(194, 201, 205)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
      Object {
        "borderColor": "rgb(231, 8, 102)",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          Object {
            "color": "rgb(231, 8, 102)",
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect light mode should render correctly with "valid" false and "focused" (focused should take precedence) 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": null,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(194, 201, 205)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
      Object {
        "borderColor": "rgb(231, 8, 102)",
      },
      Object {
        "borderColor": "rgb(0, 98, 227)",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          Object {
            "color": "rgb(231, 8, 102)",
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect light mode should render correctly with "valid" false and a validation message 1`] = `
<View>
  <View
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": false,
        "color": null,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "rgb(194, 201, 205)",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 4,
        },
        Object {
          "borderColor": "rgb(231, 8, 102)",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "marginStart": 4,
            },
            Object {
              "color": "rgb(231, 8, 102)",
            },
          ],
        ]
      }
    >
      
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "marginStart": 4,
            },
            null,
          ],
        ]
      }
    >
      
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0,
          "textAlign": "left",
        },
        Object {},
        Object {
          "color": "rgb(231, 8, 102)",
          "paddingTop": 4,
        },
      ]
    }
  >
    Nope
  </Text>
</View>
`;

exports[`Android BpkSelect light mode should render correctly with "valid" true 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": null,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(194, 201, 205)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          Object {
            "color": "rgb(12, 131, 138)",
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect light mode should render correctly with a text label 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": null,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(194, 201, 205)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          false,
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect light mode should render correctly with an element label 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": null,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(194, 201, 205)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
>
  <View />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect light mode should render correctly with custom styles 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": null,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(194, 201, 205)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          false,
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect light mode should render correctly with the disabled prop 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={false}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": null,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(194, 201, 205)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
      Object {
        "borderColor": "rgb(224, 227, 229)",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          Array [
            Object {
              "color": "rgba(0, 0, 0, 0.2)",
            },
          ],
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          Object {
            "color": "rgba(0, 0, 0, 0.2)",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect light mode should render correctly with the focused and disabled props (disabled take precedence) 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={false}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": null,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(194, 201, 205)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
      Object {
        "borderColor": "rgb(224, 227, 229)",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          Array [
            Object {
              "color": "rgba(0, 0, 0, 0.2)",
            },
          ],
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          Object {
            "color": "rgba(0, 0, 0, 0.2)",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect light mode should render correctly with the focused prop 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "borderless": false,
      "color": null,
      "rippleRadius": undefined,
      "type": "RippleAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(194, 201, 205)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
      Object {
        "borderColor": "rgb(0, 98, 227)",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          false,
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          null,
        ],
      ]
    }
  >
    
  </Text>
</View>
`;
